rust_writer_procedural/tests/ui/finder_fails_if_local_implementor_not_find_method.stderr
error[E0599]: no method named `find` found for struct `SomeImplementor` in the current scope
  --> tests/ui/finder_fails_if_local_implementor_not_find_method.rs:13:1
   |
9  | struct SomeImplementor {
   | ---------------------- method `find` not found for this struct
...
13 | #[finder(local = SomeImplementor, rust_writer::ast::implementors::ItemToImpl<'a>)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SomeImplementor`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `find`, perhaps you need to implement it:
           candidate #1: `Iterator`
   = note: this error originates in the attribute macro `finder` (in Nightly builds, run with -Z macro-backtrace for more info)
